# inc_mw_com

./: Cargo.toml  README.md
com-api/: Cargo.toml
com-api-example/: Cargo.toml
com-api-example/src/: main.rs
com-api-sample-instance/: Cargo.toml
com-api-sample-instance/src/: lib.rs
com-api-sample-interface/: Cargo.toml
com-api-sample-interface/src/: lib.rs
com-api-sample-runtime/: Cargo.toml
com-api-sample-runtime/src/: lib.rs
com-api/docs/: Comp.puml  static.puml
com-api/src/: lib.rs  sample_impl.rs  sample_interface.rs
mw/com/: BUILD  README.md  com_error_domain.cpp  com_error_domain.h  runtime.cpp  runtime.h  runtime_test.cpp  types.cpp  types.h  (+2 more)
qor-com/: Cargo.toml  build.rs
qor-com/debug/: qor_com_debug.py
qor-com/doc/: architecture.puml
qor-com/examples/: event.rs  event_dynamic.rs  listener.rs  notifier.rs  signal.rs  signal_dynamic.rs  topic.rs  topic_dynamic.rs
qor-com/src/: adapter.rs  base.rs  concepts.rs  lib.rs
qor-com/src/adapter/: dynamic.rs  heap.rs  local.rs  localheap.rs
qor-com/src/adapter/dynamic/: event.rs  signal.rs  topic.rs
qor-com/src/adapter/heap/: event.rs  remote_procedure.rs  signal.rs
qor-com/src/adapter/local/: event.rs  remote_procedure.rs  rpc.rs  signal.rs  topic.rs
qor-com/src/adapter/localheap/: buffer.rs  event.rs  method.rs  remote_procedure.rs  rpc.rs  sample.rs  signal.rs  topic.rs
qor-com/src/base/: event.rs  fire_and_forget.rs  remote_procedure.rs  signal.rs  variable.rs
qor-com/src/concepts/: adapter.rs  fire_and_forget.rs  rpc.rs  signal.rs  topic.rs  variable.rs
src/: main.rs
(+946 files in other folders)
