[package]
name = "qor-com"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
qor-core = { path = "../qor-core" }
qor-os = { path = "../qor-os" }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["signals_supported", "events_supported", "dynamic_adapter"]
signals_supported = []
variables_supported = []
events_supported = []
fire_and_forget_supported = []
rpcs_supported = []
dynamic_adapter = []
