[package]
name = "qor-com"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
qor-core = { path = "../qor-core" }
qor-os = { path = "../qor-os" }
tracing = "0.1"
tracing-subscriber = "0.3"
iceoryx2 = "0.5.0"

[features]
default = ["signals_supported", "topics_supported", "dynamic_adapter"]
signals_supported = []
variables_supported = []
topics_supported = []
fire_and_forget_supported = []
rpcs_supported = []
interface_supported = []
dynamic_adapter = []
